--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,71 @@ h4 {
   padding-bottom: 5px;
   color: #fea18d;
 }
+
+.footer-container {
+  bottom: 0;
+  width: 100%;
+  height: 64px;
+  border-top: 1px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, #38495a, #a2abb3, #38495a);
+}
+
+.footer {
+  padding: 0 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.github {
+  display: block;
+  width: 120px;
+  height: 45px;
+  padding-left: 45px;
+  background-image: url(./img/github.svg);
+  background-size: 35px;
+  background-repeat: no-repeat;
+  background-position: left center;
+  line-height: 45px;
+  color: linear-gradient(to left, #38495a, #a2abb3, #38495a);
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  transition: 0.3s;
+}
+
+.rss {
+  display: block;
+  position: relative;
+  font-family: "Open Sans", sans-serif;
+  width: 86px;
+  height: 32px;
+  background-image: url(./img/rss.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding-right: 25px;
+}
+
+.rss-year {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: 21px;
+  letter-spacing: -2px;
+  color: linear-gradient(to left, #38495a, #a2abb3, #38495a);
+  line-height: 0.9;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.github:hover {
+  color: #0f0049;
+}
+
+.rss:hover .rss-year {
+  right: -5px;
+  letter-spacing: 0;
+}
